fix game logo too wide for mobile screen

--- a/styles/header.css
+++ b/styles/header.css
@@ -14,4 +14,5 @@ body {
 
 .game-title-image {
     max-width: 800px;
+    width: 80%;
 }
